syntax = "proto3";

package greet;

option go_package = ".";

import "google/api/annotations.proto";

message GreetRequest {
  string first_name =1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  // unary
  rpc Greet (GreetRequest) returns (GreetResponse) {
    option (google.api.http) = {
      post: "/v1/greet",
      body: "*"
    };
  };

  // server stream
  rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);

  // client stream
  rpc LongGreet (stream GreetRequest) returns (GreetResponse);

  // bidirectional stream
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);
}